week5/05-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: stat
spec:
  serviceName: mysql-headless
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mysql
          image: mysql:8.0.36
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: mysql-conf
              mountPath: /etc/mysql/conf.d
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: config-source
          configMap:
            name: mysql-config
            items:
              - key: base.cnf
                path: base.cnf
        - name: init-scripts
          configMap:
            name: mysql-config
            defaultMode: 0755
            items:
              - key: 01-create-repl-user.sh
                path: 01-create-repl-user.sh
        - name: mysql-conf
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: ""
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
