week5/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: banking-ingress
#   namespace: banking
#   annotations:
#     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: banking.local
#       http:
#         paths:
#           - path: /api/users
#             pathType: Prefix
#             backend:
#               service:
#                 name: user-service
#                 port:
#                   number: 3001
#           - path: /api/accounts
#             pathType: Prefix
#             backend:
#               service:
#                 name: account-service
#                 port:
#                   number: 3002
#           - path: /api/transactions
#             pathType: Prefix
#             backend:
#               service:
#                 name: transaction-service
#                 port:
#                   number: 3003
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /api/accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3002

          - path: /api/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3003

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
